@@ -17,23 +17,18 @@ package org.apache.solr.cloud;
  * limitations under the License.
  */
 
-import java.io.File;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Set;
-
 import org.apache.lucene.util.LuceneTestCase.Slow;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.cloud.ClusterState;
-import org.apache.solr.common.cloud.Replica;
+import org.apache.solr.common.cloud.DocCollection;
+import org.apache.solr.common.cloud.DocRouter;
+import org.apache.solr.common.cloud.ImplicitDocRouter;
 import org.apache.solr.common.cloud.Slice;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkNodeProps;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.CoreContainer.Initializer;
-import org.apache.solr.core.CoreDescriptor;
-import org.apache.solr.core.SolrCore;
 import org.apache.zookeeper.CreateMode;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
@@ -41,8 +36,13 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.File;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.Map;
+
 @Slow
-public class ClusterStateUpdateTest extends SolrTestCaseJ4  {
+public class SliceStateUpdateTest extends SolrTestCaseJ4 {
   protected static Logger log = LoggerFactory
       .getLogger(AbstractZkTestCase.class);
 
@@ -56,23 +56,19 @@ public class ClusterStateUpdateTest extends SolrTestCaseJ4  {
 
   private CoreContainer container2;
 
-  private CoreContainer container3;
-
   private File dataDir1;
 
   private File dataDir2;
 
   private File dataDir3;
-  
-  private File dataDir4;
 
   private Initializer init2;
-  
+
   @BeforeClass
   public static void beforeClass() {
     System.setProperty("solrcloud.skip.autorecovery", "true");
   }
-  
+
   @AfterClass
   public static void afterClass() throws InterruptedException {
     System.clearProperty("solrcloud.skip.autorecovery");
@@ -91,59 +87,13 @@ public class ClusterStateUpdateTest extends SolrTestCaseJ4  {
     System.setProperty("zkHost", zkServer.getZkAddress());
     AbstractZkTestCase.buildZooKeeper(zkServer.getZkHost(), zkServer
         .getZkAddress(), "solrconfig.xml", "schema.xml");
-    
-    log.info("####SETUP_START " + getTestName());
-    dataDir1 = new File(dataDir + File.separator + "data1");
-    dataDir1.mkdirs();
-    
-    dataDir2 = new File(dataDir + File.separator + "data2");
-    dataDir2.mkdirs();
-    
-    dataDir3 = new File(dataDir + File.separator + "data3");
-    dataDir3.mkdirs();
-    
-    dataDir4 = new File(dataDir + File.separator + "data4");
-    dataDir4.mkdirs();
-    
-    // set some system properties for use by tests
-    System.setProperty("solr.test.sys.prop1", "propone");
-    System.setProperty("solr.test.sys.prop2", "proptwo");
-    
-    System.setProperty("solr.solr.home", TEST_HOME());
-    System.setProperty("hostPort", "1661");
-    CoreContainer.Initializer init1 = new CoreContainer.Initializer();
-    System.setProperty("solr.data.dir", ClusterStateUpdateTest.this.dataDir1.getAbsolutePath());
-    container1 = init1.initialize();
-    System.clearProperty("hostPort");
-    
-    System.setProperty("hostPort", "1662");
-    init2 = new CoreContainer.Initializer();
-    System.setProperty("solr.data.dir", ClusterStateUpdateTest.this.dataDir2.getAbsolutePath());
-    container2 = init2.initialize();
-    System.clearProperty("hostPort");
-    
-    System.setProperty("hostPort", "1663");
-    CoreContainer.Initializer init3 = new CoreContainer.Initializer();
-   
-    System.setProperty("solr.data.dir", ClusterStateUpdateTest.this.dataDir3.getAbsolutePath());
-    container3 = init3.initialize();
-    System.clearProperty("hostPort");
-    System.clearProperty("solr.solr.home");
-    
-    log.info("####SETUP_END " + getTestName());
-    
-  }
 
-  
-  @Test
-  public void testCoreRegistration() throws Exception {
-    System.setProperty("solrcloud.update.delay", "1");
-    
-   
-    Map<String,Object> props2 = new HashMap<String,Object>();
+    log.info("####SETUP_START " + getTestName());
+    Map<String, Object> props2 = new HashMap<String, Object>();
     props2.put("configName", "conf1");
+
     ZkNodeProps zkProps2 = new ZkNodeProps(props2);
-    
+
     SolrZkClient zkClient = new SolrZkClient(zkServer.getZkAddress(),
         AbstractZkTestCase.TIMEOUT);
     zkClient.makePath(ZkStateReader.COLLECTIONS_ZKNODE + "/testcore",
@@ -152,99 +102,96 @@ public class ClusterStateUpdateTest extends SolrTestCaseJ4  {
         CreateMode.PERSISTENT, true);
     zkClient.close();
 
-    CoreDescriptor dcore = new CoreDescriptor(container1, "testcore",
-        "testcore");
-    
-    dcore.setDataDir(dataDir4.getAbsolutePath());
+    dataDir1 = new File(dataDir + File.separator + "data1");
+    dataDir1.mkdirs();
 
-    SolrCore core = container1.create(dcore);
+    dataDir2 = new File(dataDir + File.separator + "data2");
+    dataDir2.mkdirs();
+
+    dataDir3 = new File(dataDir + File.separator + "data3");
+    dataDir3.mkdirs();
+
+    // set some system properties for use by tests
+    System.setProperty("solr.test.sys.prop1", "propone");
+    System.setProperty("solr.test.sys.prop2", "proptwo");
+
+    System.setProperty("solr.solr.home", TEST_HOME());
+    System.setProperty("hostPort", "1661");
+    CoreContainer.Initializer init1 = new CoreContainer.Initializer();
+    System.setProperty("solr.data.dir", SliceStateUpdateTest.this.dataDir1.getAbsolutePath());
+    container1 = init1.initialize();
+
+    System.clearProperty("hostPort");
+
+    System.setProperty("hostPort", "1662");
+    init2 = new CoreContainer.Initializer();
+    System.setProperty("solr.data.dir", SliceStateUpdateTest.this.dataDir2.getAbsolutePath());
+    container2 = init2.initialize();
+    System.clearProperty("hostPort");
+
+    System.clearProperty("solr.solr.home");
+
+    log.info("####SETUP_END " + getTestName());
+
+  }
+
+
+  @Test
+  public void testSliceStateUpdate() throws Exception {
+    System.setProperty("solrcloud.update.delay", "1");
     
-    container1.register(core, false);
+    /* Get ClusterState, update slice state and publish it to Zookeeper */
+
+    ClusterState clusterState = container1.getZkController().getClusterState();
+    Map<String, DocCollection> collectionStates =
+        new LinkedHashMap<String, DocCollection>(clusterState.getCollectionStates());
+
+    Map<String, Slice> slicesMap = clusterState.getSlicesMap("collection1");
+    Map<String, Object> props = new HashMap<String, Object>(1);
+    Slice slice = slicesMap.get("shard1");
+    Map<String, Object> prop = slice.getProperties();
+    prop.put("state", "inactive");
+    Slice newSlice = new Slice(slice.getName(), slice.getReplicasMap(), prop);
+    slicesMap.put(newSlice.getName(), newSlice);
+    props.put(DocCollection.DOC_ROUTER, ImplicitDocRouter.NAME);
+
+    DocCollection coll = new DocCollection("collection1", slicesMap, props, DocRouter.DEFAULT);
+    collectionStates.put("collection1", coll);
+    SolrZkClient zkClient = new SolrZkClient(zkServer.getZkAddress(),
+        AbstractZkTestCase.TIMEOUT);
+
+    ClusterState newState = new ClusterState(clusterState.getLiveNodes(), collectionStates);
+    zkClient.setData(ZkStateReader.CLUSTER_STATE,
+        ZkStateReader.toJSON(newState), true);
+    zkClient.close();
     
+    /* Read state from another container and confirm the change */
     ZkController zkController2 = container2.getZkController();
-
-    String host = zkController2.getHostName();
-    
-    // slight pause - TODO: takes an oddly long amount of time to schedule tasks
-    // with almost no delay ...
     ClusterState clusterState2 = null;
-    Map<String,Slice> slices = null;
+    Map<String, Slice> slices = null;
     for (int i = 75; i > 0; i--) {
       clusterState2 = zkController2.getClusterState();
-      slices = clusterState2.getSlicesMap("testcore");
-      
+      slices = clusterState2.getAllSlicesMap("collection1");
       if (slices != null && slices.containsKey("shard1")
-          && slices.get("shard1").getReplicasMap().size() > 0) {
+          && slices.get("shard1").getState().equals("inactive")) {
         break;
       }
       Thread.sleep(500);
     }
 
     assertNotNull(slices);
-    assertTrue(slices.containsKey("shard1"));
 
-    Slice slice = slices.get("shard1");
-    assertEquals("shard1", slice.getName());
-
-    Map<String,Replica> shards = slice.getReplicasMap();
-
-    assertEquals(1, shards.size());
-
-    Replica zkProps = shards.get(host + ":1661_solr_testcore");
-
-    assertNotNull(zkProps);
-
-    assertEquals(host + ":1661_solr", zkProps.getStr(ZkStateReader.NODE_NAME_PROP));
-
-    assertEquals("http://" + host + ":1661/solr", zkProps.getStr(ZkStateReader.BASE_URL_PROP));
-
-    Set<String> liveNodes = clusterState2.getLiveNodes();
-    assertNotNull(liveNodes);
-    assertEquals(3, liveNodes.size());
-
-    container3.shutdown();
-
-    // slight pause (15s timeout) for watch to trigger
-    for(int i = 0; i < (5 * 15); i++) {
-      if(zkController2.getClusterState().getLiveNodes().size() == 2) {
-        break;
-      }
-      Thread.sleep(200);
-    }
-
-    assertEquals(2, zkController2.getClusterState().getLiveNodes().size());
-
-    // quickly kill / start client
-
-    container2.getZkController().getZkClient().getSolrZooKeeper().getConnection()
-        .disconnect();
-    container2.shutdown();
-
-    container2 = init2.initialize();
-    
-    // pause for watch to trigger
-    for(int i = 0; i < 200; i++) {
-      if (container1.getZkController().getClusterState().liveNodesContain(
-          container2.getZkController().getNodeName())) {
-        break;
-      }
-      Thread.sleep(100);
-    }
-
-    assertTrue(container1.getZkController().getClusterState().liveNodesContain(
-        container2.getZkController().getNodeName()));
-
-    // core.close();  // don't close - this core is managed by container1 now
+    assertEquals("shard1", slices.get("shard1").getName());
+    assertEquals("inactive", slices.get("shard1").getState());
   }
 
   @Override
   public void tearDown() throws Exception {
     if (VERBOSE) {
-      printLayout(zkServer.getZkHost());
+      ClusterStateUpdateTest.printLayout(zkServer.getZkHost());
     }
     container1.shutdown();
     container2.shutdown();
-    container3.shutdown();
 
     zkServer.shutdown();
     super.tearDown();
@@ -252,12 +199,5 @@ public class ClusterStateUpdateTest extends SolrTestCaseJ4  {
     System.clearProperty("zkHost");
     System.clearProperty("hostPort");
     System.clearProperty("solrcloud.update.delay");
-  }
-  
-  static void printLayout(String zkHost) throws Exception {
-    SolrZkClient zkClient = new SolrZkClient(
-        zkHost, AbstractZkTestCase.TIMEOUT);
-    zkClient.printLayoutToStdOut();
-    zkClient.close();
   }
 }
